# ffxiv-discord-assistant

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: db.rs  main.rs  universalis.rs  xiv.rs
