[package]
name = "ffxiv-discord-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffxiv-crafting = "6.3.3"
serenity = "0.11.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cached = { version = "0.46.0", features = ["async"] }
serde = { version = "1.0.190", features = ["derive"] }
once_cell = { version = "1.18.0", features = [] }
mongodb = "2.7.1"